--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     ports:
       - "8080:8080"
     env_file:
-      - .env
+      - .env.python
   mongo:
     image: mongo
+    env_file:
+      - .env.mongo
